--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -16,10 +16,10 @@ name: Lint Code Base
 #############################
 on:
   push:
-    branches-ignore: [main]
+    branches-ignore: [master]
     # Remove the line above to run when pushing to master
   pull_request:
-    branches: [main]
+    branches: [master]
 
 ###############
 # Set the Job #
